# pm-tool

./: AGENTS.md  Dockerfile
.claude/: settings.local.json
backend/: AGENTS.md  ai.py  db.py  main.py  pyproject.toml
backend/tests/: test_main.py
docs/: DATABASE.md  PLAN.md
frontend/: AGENTS.md
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: ChatWidget.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx
frontend/src/lib/: api.ts  auth.test.tsx  auth.tsx
frontend/tests/: auth.spec.ts  kanban.spec.ts
scripts/: start.sh  stop.sh
